tests/rules/samples/test_file_210218.out
[36mtest_file_210218.c[0m - [32mIsFuncDeclaration[0m In "GlobalScope" from "None" line 1":
		<INT> <TAB> <IDENTIFIER=main> <LPARENTHESIS> <VOID> <RPARENTHESIS> <NEWLINE>
[36mtest_file_210218.c[0m - [32mIsBlockStart[0m In "Function" from "GlobalScope" line 2":
		<LBRACE> <NEWLINE>
[36mtest_file_210218.c[0m - [32mIsAssignation[0m In "Function" from "GlobalScope" line 3":
		<TAB> <IDENTIFIER=x> <SPACE> <ASSIGN> <SPACE> <LPARENTHESIS> <LPARENTHESIS> <INT> <RPARENTHESIS> <IDENTIFIER=x> <RPARENTHESIS> <SPACE> <MULT> <SPACE> <IDENTIFIER=x> <SEMI_COLON> <NEWLINE>
[36mtest_file_210218.c[0m - [32mIsBlockEnd[0m In "Function" from "GlobalScope" line 4":
		<RBRACE> <NEWLINE>
test_file_210218.c: Error!
Error: INVALID_HEADER       (line:   1, col:   1):	Missing or invalid 42 header
