tests/rules/samples/test_file_210218.c
int	main(void)
{
	x = ((int)x) * x;
}
